2002-06-06  Clint Adams  <clint@zsh.org>

	* 17297: Src/Modules/zpty.c: 17265 continued.

2002-06-05  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17295: Src/Zle/zle_thingy.c: `zle -F' could fail because
	it examined non-existent arguments.

	* 17294: Src/Modules/tcp.c: remove session even if closing fd
	failed; remove builtin from hash table when unloading module.

2002-06-05  Peter Stephenson  <pws@csr.com>

	* 17292: Src/builtin.c: shut up compiler if no OPEN_MEMSTREAM.

	* 17265: Src/exec.c, Src/jobs.c, Src/Modules/clone.c: Make the
	`jobs' command work in a subshell of a shell with job control by
	saving the valid bits of the job table.

	* 17285: David Wolfe <dwolfe@gforcetech.com>:
	Src/Builtins/rlimits.c: finally fix 16145 to eliminate duplicate
	case statement also in ulimit.

2002-06-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 17286: Src/Zle/complist.c: don't use optimised completion
	list display code after the list has been erased or we're not
	in menu selection anymore anyway

2002-06-04  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17283: Src/parse.c: `func() { ... } this bit was ignored'.

2002-06-02  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 17273: Src/parse.c: `outer() { inner(); }' succeded; when outer
	ran it created a bogus `inner' which crashed the shell.  Make
	original command issue error.

2002-05-31  Clint Adams  <clint@zsh.org>

	* 17266: Completion/Unix/Command/_man: check `manpath`
	even when $MANPATH is set.

2002-05-30  Peter Stephenson  <pws@csr.com>

	* 17253: Src/Modules/tcp.c, Doc/Zsh/mod_tcp.c: ztcp -l provides
	parseable information on sessions.

2002-05-29  Sven Wischnowsky  <wischnow@zsh.org>

	* 17252: Completion/Unix/Type/_path_files: fix for use of (z)
	parameter modifier; the first word in the parameter is parsed
	like the first word on a command line, treating parens
	specially

2002-05-29  Peter Stephenson  <pws@csr.com>

	* 17250: Src/signals.c: don't execsave()/execrestore() around